Refactor with TaskSystem